--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(omega)
 
 include_directories(include)
 
+add_compile_options(-std=c++17)
+
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(omega ${SOURCES})
